# project-cokolwiek

./: .gitignore  Cargo.toml  README.md  build.rs  setup_paths.sh
en-model/: setup.sh
lib-stt/: setup.sh
pl-model/: setup.sh
src/: easy-mark-editor.rs  easy_mark_editor.rs  easy_mark_parser.rs  lib.rs  main.rs  recorder.rs  stter.rs
